load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ppx_archive",
    "ppx_module",
    "ppx_ns_archive",
)

# load("@obazl_rules_ocaml//ocaml:macros.bzl", "ns_env")
# ns_env(aliases = glob(["*.ml"]))

################################################################
## PPX STANZA 1: PPX_OPTCOMP
################################################################
PPX_OPTCOMP_OPAM_DEPS = [
    "compiler-libs.common",
    "base",
    "ppxlib",
    "stdio",
]

#################
ppx_ns_archive(
    name = "ppx_optcomp",
    submodules = [
        ":_Cparser",
        ":_Interpreter",
        ":_Ppx_optcomp",
        ":_Token"
    ],
    visibility = ["//visibility:public"]
)

# ###########
ppx_module(
    name = "_Ppx_optcomp",
    struct = "ppx_optcomp.ml",
    deps = [
        "_Cparser",
        "_Interpreter",
        "_Token",
    ],
    deps_opam = PPX_OPTCOMP_OPAM_DEPS
)

###########
ppx_module(
    name = "_Cparser",
    struct = "cparser.ml",
    deps = [
        "_Token",
    ],
    deps_opam = PPX_OPTCOMP_OPAM_DEPS
)

###########
ppx_module(
    name = "_Interpreter",
    struct = "interpreter.ml",
    deps_opam = PPX_OPTCOMP_OPAM_DEPS
)

###########
ppx_module(
    name = "_Token",
    struct = "token.ml",
    deps_opam = PPX_OPTCOMP_OPAM_DEPS
)
